--- a/dating/sass/blocks/header.scss
+++ b/dating/sass/blocks/header.scss
@@ -1,3 +1,12 @@
 .header {
   padding: 50px 0;
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .header {
+    padding: 22px 30px;
+    background: #fff;
+  }
+}
