--- a/dating/sass/blocks/button.scss
+++ b/dating/sass/blocks/button.scss
@@ -60,3 +60,20 @@
     }
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .button {
+    padding: 15px 0;
+    font-size: 14px;
+    
+    &--facebook {
+      
+      &::before {
+        top: 15px;
+        left: 40px;
+      }
+    }
+  }
+}
