--- a/dating/sass/blocks/features.scss
+++ b/dating/sass/blocks/features.scss
@@ -51,3 +51,29 @@
   font-weight: 400;
   text-align: center;
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .features {
+    padding: 35px 15px 70px 15px;
+  }
+  
+  .features__title {
+    margin: 0 0 40px 0;
+    font-size: 36px;
+  }
+  
+  .features__flex {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .features__box {
+    margin: 0 0 35px 0;
+    
+    &:last-child {
+      margin: 0;
+    }
+  }
+}
