--- a/dating/sass/blocks/how.scss
+++ b/dating/sass/blocks/how.scss
@@ -177,5 +177,42 @@
 }
 
 @media screen and ($mobile-widths) {
-
+  .how-it-work {
+    
+    .item {
+      
+      .parallax {
+        display: none;
+      }
+    }
+  }
+  
+  .how-it-work__box {
+    padding: 0 15px;
+  }
+  
+  .how-it-work__name {
+    margin-left: 0 !important;
+    margin-bottom: 180px !important;
+    font-size: 36px !important;
+    text-align: center;
+  }
+  
+  .how-it-work .item .container {
+    top: 200px;
+  }
+  
+  .how-it-work h2 {
+    margin: 0 0 30px 0;
+    text-align: center;
+  }
+  
+  .how-it-work p {
+    margin: 0;
+    text-align: center;
+  }
+  
+  .how-it-work .slick-dots {
+    top: 300px;
+  }
 }
