--- a/dating/sass/blocks/girl.scss
+++ b/dating/sass/blocks/girl.scss
@@ -31,7 +31,6 @@
 .girl__link {
   position: relative;
   display: block;
-  height: 300px;
   
   &::before {
     content: '';
@@ -52,7 +51,7 @@
 
 .girl__photo {
   width: 100%;
-  height: 300px;
+  background: url('../img/girl-1.jpg') no-repeat top / cover;
 }
 
 .girl__status {
