--- a/dating/sass/style.scss
+++ b/dating/sass/style.scss
@@ -11,3 +11,7 @@
 @import 'blocks/how';
 @import 'blocks/love';
 @import 'blocks/footer';
+
+@import 'blocks/main';
+@import 'blocks/authorization';
+@import 'blocks/form';
