--- a/dating/sass/blocks/header.scss
+++ b/dating/sass/blocks/header.scss
@@ -1,5 +1,13 @@
 .header {
   padding: 50px 0;
+  
+  &--inner {
+    position: relative;
+    padding: 30px 0;
+    background: #fff;
+    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.11);
+    z-index: 5;
+  }
 }
 
 @media screen and ($tablet-widths) {}
